--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -39,7 +39,13 @@ modules:
   - name: llvm
     buildsystem: simple
     build-commands:
-    - cp -r /usr/lib/sdk/llvm20/ /app/lib
+    - mkdir -p /app/lib/llvm20/bin/
+    - mkdir -p /app/lib/llvm20/lib/
+    - cp /usr/lib/sdk/llvm20/bin/clang /app/lib/llvm20/bin
+    - cp /usr/lib/sdk/llvm20/bin/ld.lld /app/lib/llvm20/bin
+    - cp /usr/lib/sdk/llvm20/bin/llvm-objcopy /app/lib/llvm20/bin
+    - cp /usr/lib/sdk/llvm20/bin/llvm-objdump /app/lib/llvm20/bin
+    - cp -r /usr/lib/sdk/llvm20/lib/* /app/lib/llvm20/lib/
 
   - name: SDL
     buildsystem: simple
