Switch to bundled emulator model for flatpak

--- a/install/linux/appimage/AppImageBuilder.yml
+++ b/install/linux/appimage/AppImageBuilder.yml
@@ -36,10 +36,9 @@ AppDir:
 
   runtime:
     env:
-      SL_SYS_CONFIG_PATH: $HOME/.config/SerialLoops/appimage-sysconfig.json
       SL_LLVM_PATH: $APPDIR/usr/lib/llvm-19
       SL_NINJA_PATH: $APPDIR/usr/bin/ninja
-      SL_USE_UPDATER: true
+      SL_STORE_SYS_CONFIG: false
 
   test:
     fedora-30:
